fix a layout issue when the screen is too short

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -85,6 +85,7 @@ body {
         height: 100vh;
         width: 100%;
         position: relative;
+        overflow-y: hidden;
     }
 
     .landing-video {
